# DUA-VLM-POC

./: .gitignore  LICENSE  README.md  dua-vlm-poc.py  mlx-vlm.py  models.txt  old-dont-use-prompts.txt  prompts.txt  pyproject.toml  results.csv  system_prompt.json  tests.csv  tests.json  tests_disaster.json
ignore/: results.csv
tests/: results_test.csv  test_tests.csv  tests_disaster.json  tests_disaster_system_prompt.json  tests_ein.json  tests_ein_system_prompt.json  tests_employment.json  tests_employment_old.json  tests_employment_system_prompt.json
tests/images/self-employment/: readme.md
tests/images/self-employment/offers/: test-offer-001.HEIC  test-offer-002.HEIC  test-offer-003.HEIC
